# CSCI513_MP1

./: .gitignore  viz.py
Part1/: Carla.Dockerfile  README.md  tmp.py
Part1/logs/: episode-00008.csv
Part1/mp1_controller/: controller.py
csci513-miniproject1_a/: Carla.def  Makefile  README.md  log.ext  op.txt
csci513-miniproject1_b/: README.md
csci513-miniproject1_b_hint/: .gitignore  README.md  setup.cfg
csci513-miniproject1_b_hint/logs/: episode-00000.csv
csci513-miniproject1_b_hint/mp1_controller/: controller.py
csci513-miniproject1_b_hint/mp1_distance_predictor/: detect.py  inference_distance.py  predictor.py
csci513-miniproject1_b_hint/mp1_simulator/: __main__.py  render.py  simulator.py
logs/: episode-00000.csv  episode-00001.csv  episode-00002.csv  episode-00003.csv  episode-00004.csv  episode-00005.csv  episode-00006.csv  episode-00007.csv  episode-00008.csv  episode-00009.csv  episode-00010.csv  episode-00011.csv  episode-00012.csv  episode-00013.csv  episode-00014.csv  episode-00015.csv  episode-00016.csv  episode-00017.csv  episode-00018.csv  episode-00019.csv  episode-00020.csv  episode-00021.csv  episode-00022.csv  episode-00023.csv  episode-00024.csv  episode-00025.csv  episode-00026.csv  episode-00027.csv  episode-00028.csv  episode-00029.csv  episode-00030.csv  episode-00031.csv  episode-00032.csv  episode-00033.csv  episode-00034.csv  episode-00035.csv  episode-00036.csv  episode-00037.csv  episode-00038.csv  episode-00039.csv  (+10 more)
mp1_controller/: controller.py
mp1_evaluation/: __main__.py
mp1_simulator/: simulator.py
(+21 files in other folders)
