[metadata]
name = csci513-miniproject1
author = Anand Balakrishnan
version = 0.1.0
description = Mini-Project 1a: Adaptive Cruise Control in CARLA
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research

[options]
zip_safe = True
packages = find:
python_requires = ~= 3.7
install_requires =
  carla==0.9.12
  numpy
  pygame
  scipy
  scikit-image
  rtamt @ https://github.com/nickovic/rtamt/tarball/ba2bc2d8a48d5c6bbd836904b7e421fb26d7e384
